fix: remove ugly horizontal scrollbar on SearchRatePage and HomePage

--- a/client/src/containers/HomePage/HomePage.css
+++ b/client/src/containers/HomePage/HomePage.css
@@ -77,7 +77,11 @@ body {
     z-index: 1;
     position: absolute;
     margin-top: 100px;
-    width: 100vw;
+    width: 100%;
     overflow: scroll;
     scroll-behavior: smooth;
+}
+
+.ratings_container::-webkit-scrollbar  {
+  display: none;
 }
